# GalSyn

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: Makefile  api.rst  conf.py  index.rst  introduction.rst  requirements.txt  tutorials.rst
docs/_static/: custom.css
docs/api/: galsyn_run_bagpipes.rst  imgutils.rst
docs/tutorials/: analyze_data.rst  analyze_props.rst  basic_usage.rst  customizing_ssp_engines.rst  dwd_cutout_tng.rst  install.rst  observe.rst  run_synthesis.rst  setting_filters.rst  (+2 more)
examples/: Example 1 - Download and standardize sim data.ipynb  Example 2 - Generating SSP grids file.ipynb  Example 3 - Generating idealized synthetic data cubes.ipynb  Example 3 - Generating idealized synthetic data cubes: imaging only.ipynb  Example 4 - Generating idealized synthetic data cubes: including IFS.ipynb  Example 5 - Reconstructing resolved SFH.ipynb  Example 6 - Simulating IFU observations.ipynb  Example 7 - Simulating imaging observations.ipynb  Further Example 1 - Generating data from Gadget-4 snapshots.ipynb  Further Example 1 - Generating data from Swift snapshots.ipynb  Further Example 1 - Selecting sample from TNG.ipynb
galsyn/: .___pycache__  __init__.py  config.py  dust.py  galsyn.py  galsyn_mpi.py  galsyn_run.py  galsyn_run_bagpipes.py  galsyn_run_fsps.py  imgutils.py  observe.py  sfh.py  simutils.py  simutils_gadget.py  simutils_swift.py  simutils_tng.py  ssp_generator.py  ssp_generator_bagpipes.py  ssp_generator_fsps.py  utils.py
galsyn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+77 files in other folders)
